<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<!-- POM file generated with GWT webAppCreator -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>uk.ac.ebi.fgpt</groupId>
	<artifactId>magecomet</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>GWT Maven Archetype</name>

	<properties>
		<!-- Convenience property to set the GWT version -->
		<gwtVersion>2.2.0</gwtVersion>
		<!-- GWT needs at least java 1.5 -->
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

	</properties>


	<repositories>
		<repository>
			<id>limpopo-repo</id>
			<name>Limpopo Mini-SF Repository</name>
			<url>http://limpopo.sourceforge.net/maven/repo</url>
		</repository>
		<repository>
			<id>smartclient</id>
			<name>smartclient.com</name>
			<url>http://www.smartclient.com/maven2/</url>
		</repository>
		<!--		<repository>-->
		<!--			<id>gwtupload</id>-->
		<!--			<url>http://gwtupload.googlecode.com/svn/mavenrepo/</url>-->
		<!--		</repository>-->
		<repository>
			<id>sonatype-snapshots</id>
			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
		<repository>
			<id>ontoCAT-repo</id>
			<name>OntoCAT SF Repository</name>
			<url>http://ontocat.sourceforge.net/maven/repo/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwtVersion}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwtVersion}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>uk.ac.ebi.arrayexpress2</groupId>
			<artifactId>limpopo</artifactId>
			<version>1.1-rc1</version>
		</dependency>
		<dependency>
			<groupId>com.smartgwt</groupId>
			<artifactId>smartgwt</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>uk.ac.ebi</groupId>
			<artifactId>monq</artifactId>
			<version>1.1.1</version>
		</dependency>
<!--		<dependency>   -->
<!--   <groupId>net.sf.json-lib</groupId>   -->
<!--   <artifactId>json-lib</artifactId>   -->
<!--   <version>1.0</version>   -->
<!--   <classifier>jdk15</classifier>   -->
<!--</dependency>-->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20090211</version>
		</dependency>
		<!--		<dependency>-->
		<!--			<groupId>com.googlecode.gwtupload</groupId>-->
		<!--			<artifactId>gwtupload</artifactId>-->
		<!--			<version>0.6.3</version>-->
		<!--		</dependency>-->
		<dependency>
			<groupId>com.googlecode.gwtupload</groupId>
			<artifactId>gwtupload</artifactId>
			<version>0.6.4-SNAPSHOT</version>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>annotare</groupId>-->
<!--			<artifactId>annotare-validator</artifactId>-->
<!--			<version>1.1</version>-->
<!--		</dependency>-->
		<dependency>
			<groupId>uk.ac.ebi</groupId>
			<artifactId>ontoCAT</artifactId>
			<version>0.9.7</version>
			<exclusions>
				<exclusion>
					<artifactId>org.mortbay.jetty</artifactId>
					<groupId>jetty</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<!--		<dependency>-->
		<!--			<groupId>uk.ac.ebi.microarray</groupId>-->
		<!--			<artifactId>ontoCAT</artifactId>-->
		<!--			<version>0.9.6.1</version>-->
		<!--		</dependency>-->
		<dependency>
			<groupId>commons-net</groupId>
			<artifactId>commons-net</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>annotare</groupId>
			<artifactId>limpopo-validator-annotare</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>

			<groupId>uk.ac.ebi.arrayexpress2</groupId>
			<artifactId>limpopo-validator-ebi</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>magecomet</finalName>
		<!-- Generate compiled stuff in the folder used for developing mode -->
		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

		<plugins>

			<!-- GWT Maven Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>2.2.0</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>test</goal>
							<goal>i18n</goal>
							<!--							<goal>generateAsync</goal>-->
						</goals>
					</execution>
				</executions>
				<!--
					Plugin configuration. There are many available options, see
					gwt-maven-plugin documentation at codehaus.org
				-->
				<configuration>
					<extraJvmArgs>-XX:MaxPermSize=4000M -Xmx6000M</extraJvmArgs>
					<runTarget>magecomet.html</runTarget>
					<hostedWebapp>${webappDirectory}</hostedWebapp>
					<i18nMessagesBundle>uk.ac.ebi.fgpt.magecomet.client.Messages</i18nMessagesBundle>
				</configuration>
			</plugin>

			<!-- Copy static web files before executing gwt:run -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>exploded</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<webappDirectory>${webappDirectory}</webappDirectory>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
